--- a/SelfStudy/Kakao_clone/css/style.css
+++ b/SelfStudy/Kakao_clone/css/style.css
@@ -4,11 +4,12 @@
 /*Components*/
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-components.css";
 /*Screens*/
 @import "screens/login.css";
-
+@import "screens/friends.css";
 body {
   font-family: "Open Sans", sans-serif;
-
-  height: 1000vh;
+  color: #2e363e;
 }
