--- a/SelfStudy/Kakao_clone/css/reset.css
+++ b/SelfStudy/Kakao_clone/css/reset.css
@@ -127,7 +127,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
+div {
+  border: 1px solid black;
+}
 input:focus {
   outline: none;
 }
