--- a/SelfStudy/Kakao_clone/css/components/user-components.css
+++ b/SelfStudy/Kakao_clone/css/components/user-components.css
@@ -26,3 +26,13 @@
   width: 80px;
   height: 80px;
 }
+
+.user-component__avatar--sm {
+  width: 60px;
+  height: 60px;
+  border-radius: 25px;
+}
+
+.user-component__title--not-bold {
+  font-weight: 400;
+}
