--- a/SelfStudy/Kakao_clone/css/screens/friends.css
+++ b/SelfStudy/Kakao_clone/css/screens/friends.css
@@ -3,10 +3,12 @@
   display: block;
   background-color: #fafafa;
   padding: 20px 0px;
-  font-size: 16px;
+  font-size: 19px;
+  margin-bottom: 5px;
 }
 
 #friends-display-link i {
+  margin: 0px 10px;
   color: rgba(0, 0, 0, 0.3);
 }
 
