--- a/SelfStudy/Kakao_clone/css/components/user-components.css
+++ b/SelfStudy/Kakao_clone/css/components/user-components.css
@@ -1,3 +1,7 @@
+.user-component {
+  justify-content: space-between;
+}
+
 .user-component,
 .user-component__column:first-child {
   display: flex;
@@ -35,4 +39,11 @@
 
 .user-component__title--not-bold {
   font-weight: 400;
+}
+
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
