--- a/SelfStudy/Kakao_clone/css/screens/friends.css
+++ b/SelfStudy/Kakao_clone/css/screens/friends.css
@@ -15,3 +15,16 @@
 .friends-screen {
   padding: 20px var(--horizontal-space);
 }
+
+.friends-screen__channel {
+  margin-top: 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  padding-top: 15px;
+}
+
+.friends-screen__channel-header {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
+}
