--- a/SelfStudy/Kakao_clone/css/style.css
+++ b/SelfStudy/Kakao_clone/css/style.css
@@ -6,10 +6,15 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-components.css";
+@import "components/badge.css";
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
 body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
