--- a/SelfStudy/Kakao_clone/css/style.css
+++ b/SelfStudy/Kakao_clone/css/style.css
@@ -10,6 +10,7 @@
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
