--- a/SelfStudy/Kakao_clone/css/style.css
+++ b/SelfStudy/Kakao_clone/css/style.css
@@ -7,10 +7,15 @@
 @import "components/screen-header.css";
 @import "components/user-components.css";
 @import "components/badge.css";
+@import "components/icon-row.css";
+@import "components/alt-screen-header.css";
 /*Screens*/
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #2e363e;
