--- a/SelfStudy/Kakao_clone/css/components/alt-screen-header.css
+++ b/SelfStudy/Kakao_clone/css/components/alt-screen-header.css
@@ -15,6 +15,20 @@
   margin-right: auto;
 }
 
+.alt-header__column:nth-child(2) {
+  text-align: center;
+}
+
 .alt-header__column:last-child {
   margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.alt-header__column:last-child span:first-child {
+  margin-right: 20px;
+}
+
+.alt-header__column {
+  width: 33%;
 }
