--- a/SelfStudy/Kakao_clone/css/components/nav-bar.css
+++ b/SelfStudy/Kakao_clone/css/components/nav-bar.css
@@ -47,3 +47,32 @@
   left: 33px;
   bottom: 25px;
 }
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 300ms ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 100ms;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 200ms;
+}
+
+.nav__btn:last-child {
+  animation-delay: 300ms;
+}
