--- a/SelfStudy/Kakao_clone/css/components/screen-header.css
+++ b/SelfStudy/Kakao_clone/css/components/screen-header.css
@@ -15,3 +15,17 @@
   margin-left: 20px;
   margin-top: 20px;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1000ms linear infinite;
+}
